// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bins actual cycles by day > cycles binned by day and station 1`] = `
Map {
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #1}" => 13,
  "{day: 2018-03-04T06:00:00.000Z}, station: MC #1}" => 35,
  "{day: 2018-03-05T06:00:00.000Z}, station: L/U #2}" => 3,
  "{day: 2018-03-05T06:00:00.000Z}, station: MC #1}" => 30,
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #2}" => 6,
  "{day: 2018-03-05T06:00:00.000Z}, station: L/U #1}" => 5,
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #3}" => 3,
}
`;

exports[`bins actual cycles by day > occupied cycles binned by day and station 1`] = `
Map {
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #1}" => 13,
  "{day: 2018-03-04T06:00:00.000Z}, station: MC #1}" => 35,
  "{day: 2018-03-05T06:00:00.000Z}, station: L/U #2}" => 3,
  "{day: 2018-03-05T06:00:00.000Z}, station: MC #1}" => 30,
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #2}" => 6,
  "{day: 2018-03-05T06:00:00.000Z}, station: L/U #1}" => 5,
  "{day: 2018-03-04T06:00:00.000Z}, station: L/U #3}" => 4,
}
`;

exports[`creates points clipboard table > clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Station
        </th>
        <th>
          Sun Mar 04 2018
        </th>
        <th>
          Mon Mar 05 2018
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <th>
          L/U #1
        </th>
        <td>
          13
        </td>
        <td>
          5
        </td>
      </tr>
      

      <tr>
        <th>
          L/U #2
        </th>
        <td>
          6
        </td>
        <td>
          3
        </td>
      </tr>
      

      <tr>
        <th>
          MC #1
        </th>
        <td>
          35
        </td>
        <td>
          30
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;
